syntax = "proto3";
import "proto/message-service/common.proto";

package proto;
option go_package = "github.com/espitman/gws-chat/pkg/protos/protogen/message-service";

message V1CreateRoomResponse {
  string id = 1;
}

message V1AddMemberToRoomResponse {
  repeated RoomMember members = 1;
}

message V1GetRoomResponse{
  string roomID = 1;
  MessageUser user = 2;
  MessageUser audience = 3;
  repeated Message messages = 6;
}

message V1AddMessageResponse {
  Message message = 1;
}

message V1GetRoomMessagesResponse {
  repeated Message messages = 1;
}

message V1GetUserChatsResponse {
  repeated UserChat chats = 1;
}

message V1GetAudienceIDResponse {
  string roomID = 1;
  uint32 audienceID = 3;
}